--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'node_modules/@mux/videojs-kit/dist/index.css';
